@@ -67,7 +67,8 @@ PointDistributionOp::PointDistributionOp()
 	m_densityParameter = new FloatParameter(
 		"density",
 		"The density of the distributed points.",
-		100.0
+		100.0,
+		0.0f
 	);
 	
 	m_offsetParameter = new V2fParameter(
